# magisterka

./: README.md  attention_params.py  config.py  lr_search.slurm  neptune_config.py  pyproject.toml  setup_env.sh  train.sh  train_single_gpu.py  training_func.py  utils.py
data/: __init__.py  classification_dataset.py  image_generation_dataset.py  load_data.py  sequence_modelling_dataset.py
models/: __init__.py  base.py  classifier.py  decoder_only.py
notebooks/: attention_mechanism.ipynb  blocks.ipynb  data.ipynb  models.ipynb  tokenizers.ipynb
training_setup/: __init__.py  attention_params.py  config.py  create_dataloaders.py  initialize_model.py  parse_arguments.py  scheduler.py  setup_logging.py  setup_neptune.py  setup_tokenizer.py  setup_training.py
transformer/: feed_forward.py  residual_layer_norm.py
transformer/blocks/: __init__.py  block.py  hourglass.py  single_layer.py  tightening_block.py  transformer_block.py  utils.py
transformer/blocks/hourglass_block/: __init__.py  attention_sampling.py  downsampling.py  hourglass.py  upsampling.py  utils.py
transformer/layers/: __init__.py  feed_forward.py
transformer/layers/multi_head_attention/: multi_head_attention.py
transformer/layers/multi_head_attention/attention_mechanism/: __init__.py  attn_params.py  base.py  vanilla_attention.py
transformer/multi_head_attention/: multi_head_attention.py
transformer/multi_head_attention/attention_mechanism/: __init__.py  attn_params.py  base.py  vanilla.py
transformer/positional_encoding/: __init__.py  base.py  learnable.py  none.py  sinusoidal.py
(+11 files in other folders)
